# factor-expr

./: .gitignore  Justfile  README.md
.github/workflows/: ci.yml  import-test.yml  release.yml
.helix/: languages.toml
assets/: test.pq
native/: Cargo.toml  build.rs
native/benches/: backtest.rs  reader.rs
native/examples/: backtest.rs  reader.rs
native/src/: float.rs  lib.rs  python.rs  replay.rs  ticker_batch.rs
native/src/ops/: arithmetic.rs  constant.rs  getter.rs  logic.rs  mod.rs  overlap_studies.rs  parser.rs
native/src/ops/window/: correlation.rs  delay.rs  mean.rs  minmax.rs  mod.rs  quantile.rs  rank.rs  returns.rs  skew.rs  stdev.rs  sum.rs
python/: pyproject.toml
python/factor_expr/: __init__.py  replay.py
python/factor_expr/tests/factors/: test_arithmetic.py  test_logic.py  test_sanity.py  test_window.py
scripts/: python-helper.py
