[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
edition = "2018"
name = "factor-expr"
version = "0.2.3"

[lib]
crate-type = ["rlib", "cdylib"]
name = "factor_expr"


[dependencies]
anyhow = "1"
arrow = { version = "50", features = [ "ffi" ] }
chrono = "0.4"
dict_derive = "0.5"
dyn-clone = "1"
fehler = "1"
itertools = "0.12"
lexpr = "0.2"
ndarray = "0.15"
num = "0.4"
num-traits = "0.2"
numpy = "0.20"
order-stats-tree = {git = "https://github.com/dovahcrow/order-stats-tree"}
parquet = "50"
pyo3 = {version = "0.20", default-features = false, features = ["macros"]}
pyo3-built = "0.4"
rayon = "1"
thiserror = "1"
polars = "0.36"

[dev-dependencies]

[build-dependencies]
built = {version = "0.7", features = ["chrono"]}

[features]
default = ["extension"]
executable = ["pyo3/auto-initialize"]
extension = ["pyo3/extension-module"]
check = []
