[tool.poetry]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
description = ""
include = ["factor_expr/*.so"]
name = "factor_expr"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1"
pandas = "^1"
pyarrow = "^3"
python = "^3.8"
tqdm = "^4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docopt = "^0.6.2"
pytest = "^6.2.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
