[tool.poetry]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Build Tools",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Scientific/Engineering",
]
description = "Extreme fast factor expression & computation library for Python."
include = ["factor_expr/*.so", "factor_expr/*.pyd"]
keywords = ["factor", "expression", "alpha", "S-expression", "quantative trading", "trading", "algotrading"]
license = "MIT"
name = "factor_expr"
readme = "README.md"
version = "0.2.1"

[tool.poetry.dependencies]
numpy = "^1"
pandas = "^1"
pyarrow = "^3"
python = "^3.8"
tqdm = "^4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docopt = "^0.6.2"
pytest = "^6.2.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
