[tool.poetry]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Build Tools",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Scientific/Engineering",
]
description = "Extreme fast factor expression & computation library for Python."
include = ["factor_expr/*.so", "factor_expr/*.pyd"]
keywords = ["factor", "expression", "alpha", "S-expression", "quantative trading", "trading", "algotrading"]
license = "MIT"
name = "factor_expr"
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
numpy = "^1.26"
pyarrow = {extras = ["cffi"], version = "^15.0.0"}
python = "^3.11"
tqdm = "^4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
python-lsp-ruff = "^2.0.2"
pyright = "^1.1.347"
docopt = "^0.6.2"
cffi = "^1.16.0"
pytest = "^7.4.4"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
